# Agent-Communication-Protocol-ACP

./: .env.example  .gitignore  Cargo.toml  IMPLEMENTATION_PLAN.md  README.md
crates/acp-cli/: Cargo.toml
crates/acp-cli/src/: client.rs  main.rs
crates/acp-cli/src/commands/: analytics.rs  discover.rs  mcp.rs  memory.rs  mod.rs  persist.rs  pipeline.rs  runtime.rs  skill.rs  slot.rs  workspace.rs
crates/acp-cli/src/tui/: draw.rs  home.rs  mod.rs  state.rs
crates/acp-discover/: Cargo.toml
crates/acp-discover/src/: health.rs  lib.rs  mcp.rs  provider.rs  registry.rs  skills.rs  subscription.rs
crates/acp-hub/: Cargo.toml
crates/acp-hub/src/: db.rs  lib.rs  main.rs  migrations.rs
crates/acp-hub/src/handlers/: agents.rs  analytics.rs  files.rs  findings.rs  mcp.rs  messages.rs  mod.rs  models.rs  pipelines.rs  runtime.rs  stream.rs  tasks.rs
crates/acp-orchestrator/: Cargo.toml
crates/acp-orchestrator/src/: adaptive.rs  lib.rs  memory.rs  pipeline.rs  recovery.rs  scheduler.rs  semantic.rs  slots.rs
crates/acp-protocol/: Cargo.toml
crates/acp-protocol/src/: lib.rs
crates/acp-runtime/: Cargo.toml
crates/acp-runtime/src/: lib.rs  manager.rs  output.rs
crates/acp-runtime/src/adapter/: claudex.rs  mod.rs
crates/acp-workspace/: Cargo.toml
crates/acp-workspace/src/: lib.rs  merge.rs  snapshot.rs  validation.rs  worktree.rs
crates/agent-client/: Cargo.toml
crates/agent-client/src/: lib.rs
crates/agent-hub/: Cargo.toml
crates/agent-hub/src/: db.rs  lib.rs  main.rs  migrations.rs
crates/agent-hub/src/handlers/: agents.rs  analytics.rs  files.rs  findings.rs  messages.rs  mod.rs  models.rs  pipelines.rs  stream.rs  tasks.rs
crates/agent-protocol/: Cargo.toml
crates/agent-protocol/src/: lib.rs
crates/agentctl/: Cargo.toml
crates/agentctl/src/: main.rs
docs/: ARCHITECTURE.md  CLI_REFERENCE.md  FILE_CLAIMS.md  FINDINGS.md  FOUR_AGENT_WORKFLOW.md  HTTP_API.md  MCP_ROADMAP.md  MESSAGE_KINDS.md  QUICKSTART.md  TASKS.md  WORKFLOW_YAML.md
examples/: kalori-fe-be-workflow.md
templates/workflows/: full_dev.yaml  quick_fix.yaml  review_only.yaml
