[package]
name = "acp-discover"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
acp-protocol = { path = "../acp-protocol" }
anyhow.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile.workspace = true
