[package]
name = "acp-orchestrator"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
acp-protocol = { path = "../acp-protocol" }
acp-runtime = { path = "../acp-runtime" }
acp-workspace = { path = "../acp-workspace" }
anyhow.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile.workspace = true
