[package]
name = "agent-hub"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
agent-protocol = { path = "../agent-protocol" }
anyhow.workspace = true
async-stream.workspace = true
axum.workspace = true
chrono.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sqlx.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
tower.workspace = true
