[package]
name = "agent-hub"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
acp-hub = { path = "../acp-hub" }
anyhow.workspace = true
axum.workspace = true
sqlx.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
