[package]
name = "agentctl"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
agent-protocol = { path = "../agent-protocol" }
anyhow.workspace = true
bytes = "1"
chrono.workspace = true
clap.workspace = true
futures-util.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
